change structure main start to use Program.cs and Startup.cs

--- a/src/Microservices/Sale/Supalai.Sale.csproj
+++ b/src/Microservices/Sale/Supalai.Sale.csproj
@@ -25,4 +25,12 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Services\" />
+    <None Remove="ConfigurationOptions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="ConfigurationOptions\" />
+  </ItemGroup>
 </Project>
