Add model BaseResponse and structure all exception

--- a/src/Microservices/Common/ClassifiedAds.CrossCuttingConcerns/ClassifiedAds.CrossCuttingConcerns.csproj
+++ b/src/Microservices/Common/ClassifiedAds.CrossCuttingConcerns/ClassifiedAds.CrossCuttingConcerns.csproj
@@ -13,4 +13,12 @@
 		<PackageReference Include="System.Text.Json" Version="6.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="BaseResponse\" />
+	  <None Remove="Constants\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="BaseResponse\" />
+	  <Folder Include="Constants\" />
+	</ItemGroup>
 </Project>
