Create structure  of module support to friendly settings coverage sonarqube analysis

--- a/src/Microservices/Sale/Spl.Crm.SaleOrder.csproj
+++ b/src/Microservices/Sale/Spl.Crm.SaleOrder.csproj
@@ -31,6 +31,20 @@
     <None Remove="ConfigurationOptions\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Modules\Booking\Controller" />
+    <Folder Include="Modules\Booking\Service" />
+    <Folder Include="Modules\Customer\Controller" />
+    <Folder Include="Modules\Customer\Service" />
+    <Folder Include="Modules\Payment\Controller" />
+    <Folder Include="Modules\Payment\Service" />
+    <Folder Include="Modules\Project\Controller" />
+    <Folder Include="Modules\Project\Service" />
+    <Folder Include="Modules\Quotation\Controller" />
+    <Folder Include="Modules\Quotation\Service" />
+    <Folder Include="Modules\SalePerson\Controller" />
+    <Folder Include="Modules\SalePerson\Service" />
+    <Folder Include="Modules\Unit\Controller" />
+    <Folder Include="Modules\Unit\Service" />
     <Folder Include="Services\" />
     <Folder Include="ConfigurationOptions\" />
   </ItemGroup>
