--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+  "JwtSettings": {
+    "Key": "SupalaiNonPordJwt2022",
+    "Issuer": "SupalaiSaleOrder",
+    "Audience": "https://spalai.com",
+    "Expire": "1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
