[OSW-56] add config and logic check  .

--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -5,6 +5,11 @@
     "Audience": "https://spalai.com",
     "Expire": "2"
   },
+  "LDAPSettings": {
+    "LDAPHost": "192.168.2.11",
+    "LDAPPath": "DC=supalai,DC=com",
+    "LDAPDomain": "supalai.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
