--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -1,8 +1,23 @@
 ﻿{
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Console": {
+      "LogLevel": {
+        "Default": "Debug",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning"
+      },
+      "FormatterName": "CustomTimePrefixingFormatter",
+      "FormatterOptions": {
+        "CustomPrefix": "",
+        "CustomSuffix": "",
+        "SingleLine": true,
+        "IncludeScopes": true,
+        "TimestampFormat": "",
+        "UseUtcTimestamp": true,
+        "JsonWriterOptions": {
+          "Indented": true
+        }
+      }
     }
   },
   "AllowedHosts": "*"
