[OSW-75] add logic find user data in DB

--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+  "ClassifiedAds": "Server=localhost,1433;Database=Supalai;User=sa;Password=test12345;"
+  },
   "JwtSettings": {
     "Key": "SupalaiNonPordJwt2022",
     "Issuer": "SupalaiSaleOrder",
