--- a/src/Microservices/Common/ClassifiedAds.Domain/ClassifiedAds.Domain.csproj
+++ b/src/Microservices/Common/ClassifiedAds.Domain/ClassifiedAds.Domain.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
