--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-  "ClassifiedAds": "Server=localhost,1433;Database=Supalai;User=sa;Password=test12345;"
+  "ClassifiedAds": "Server=192.168.2.204,1433;Database=db_crmre_spl_prd;User=atgt;Password=userDev@2022;"
   },
   "JwtSettings": {
     "Key": "SupalaiNonPordJwt2022",
