--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -5,6 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Caching": {
+    "Distributed": {
+      "Provider": "Redis",
+      "Redis": {
+        "Configuration": "192.168.2.101:6379",
+        "InstanceName": "",
+        "Config": {
+          "DefaultTimeExpire": "480", //8hr.
+          "DefaultSlidingExpire": "60",
+          "MasterConfigAbsoluteExpiration": "24:00:00",
+          "UserTimeExpire": "480",
+          "UserSlidingExpire": "60"
+        }
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
 
