[OSW-62] set connection pooling min 1 max 50

--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-  "ClassifiedAds": "Server=192.168.2.204,1433;Database=db_crmre_spl_prd;User=atgt;Password=userDev@2022;"
+  "ClassifiedAds": "Server=192.168.2.204,1433;Database=db_crmre_spl_prd;Pooling=true;Max Pool Size=50;Min Pool Size=1;User=atgt;Password=userDev@2022;"
   },
   "JwtSettings": {
     "Key": "SupalaiNonPordJwt2022",
