[OSW-55] Remove debug log / Revise method delete,refresh

--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -11,8 +11,9 @@
       "Redis": {
         "Configuration": "192.168.2.101:6379",
         "InstanceName": "",
+        "PoolSize": "10",
         "Config": {
-          "DefaultTimeExpire": "480", //8hr.
+          "DefaultTimeExpire": "480", //minute
           "DefaultSlidingExpire": "60",
           "MasterConfigAbsoluteExpiration": "24:00:00",
           "UserTimeExpire": "480",
