--- a/src/Microservices/Sale/Spl.Crm.SaleOrder.csproj
+++ b/src/Microservices/Sale/Spl.Crm.SaleOrder.csproj
@@ -12,6 +12,7 @@
 
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="StackExchange.Redis.ConnectionPool" Version="1.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
