[OSW-55] Add Prefix in InterfaceRedis / optional time expire

--- a/src/Microservices/Sale/appsettings.json
+++ b/src/Microservices/Sale/appsettings.json
@@ -42,9 +42,8 @@
         "InstanceName": "",
         "PoolSize": "10",
         "Config": {
-          "DefaultTimeExpire": "480", //minute
-          "DefaultSlidingExpire": "60",
-          "MasterConfigAbsoluteExpiration": "24:00:00",
+          "MasterConfigTimeExpire": "480",
+          "MasterConfigSlidingExpire": "60",
           "UserTimeExpire": "480",
           "UserSlidingExpire": "60"
         }
