[OSW-92] Add component for build image & docker compose file & example api for query user

--- a/src/Microservices/Sale/Properties/launchSettings.json
+++ b/src/Microservices/Sale/Properties/launchSettings.json
@@ -1,13 +1,4 @@
 {
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:4172",
-      "sslPort": 44323
-    }
-  },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -20,10 +11,19 @@
     "Supalai.Sale": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:65306",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:65306"
+    }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:4172",
+      "sslPort": 44323
     }
   }
 }
